add_subdirectory(cache)
add_subdirectory(client)
add_subdirectory(cluster)
add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(daemon)
add_subdirectory(${UBSIO_COMMON_TRACER_DIR} ${CMAKE_BINARY_DIR}/ubsio-common/tracer)
add_subdirectory(include)
add_subdirectory(memory)
add_subdirectory(net)
add_subdirectory(server)
add_subdirectory(security)
