aux_source_directory(. BIO_TP_SRCS)
add_library(bio_tp_shared SHARED ${BIO_TP_SRCS})
set_target_properties(bio_tp_shared PROPERTIES OUTPUT_NAME bio_tracepoint)
target_include_directories(bio_tp_shared PUBLIC ${CMAKE_CURRENT_LIST_DIR})
if (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
target_link_libraries(bio_tp_shared PUBLIC tracepoint_shared)
endif()
target_include_directories(bio_tp_shared PUBLIC ${CMAKE_SOURCE_DIR}/test/tools/tracepoint/include)

if (OPEN_TEST_TOOLS STREQUAL "ON")
    target_link_libraries(bio_server bio_tp_shared)
    target_link_libraries(bio_sdk bio_tp_shared)
    TARGET_INCLUDE_DIRECTORIES(bio_sdk PUBLIC ${BOOSTIO_TOOLS_INCLUDE_DIR})
    TARGET_INCLUDE_DIRECTORIES(bio_server PUBLIC ${BOOSTIO_TOOLS_INCLUDE_DIR})
endif()
